--- a/api-user-logout.html
+++ b/api-user-logout.html
@@ -9,7 +9,9 @@
       handleAs="[[handleAs]]"
       headers="{{headers}}"
       last-response="{{response}}"
-      last-error="{{error}}">
+      last-error="{{error}}"
+      on-response="on_response"
+      on-error="on_error">
     </iron-ajax>
 
   </template>
@@ -65,6 +67,16 @@
       this._compute_url();
       this._compute_headers();
       this.$.ajax.generateRequest();
+    }
+    
+    on_response: function (event) {
+        event.stopPropagation();
+        this.fire('response', this.response);
+    },
+    
+    on_error: function (event) {
+        event.stopPropagation();
+        this.fire('error', this.error);
     }
 
   });
