--- a/api-user-logout.html
+++ b/api-user-logout.html
@@ -34,7 +34,7 @@
         type: String,
         value: 'json'
       },
-      token: {
+      accessToken: {
         type: String,
       },
       headers: {
