--- a/api-user-logout.html
+++ b/api-user-logout.html
@@ -58,8 +58,8 @@
     },
 
     _compute_headers: function () {
-      if (this.access_token) {
-        this.headers.Authorization = this.access_token;
+      if (this.accessToken) {
+        this.headers.Authorization = this.accessToken;
       }
     },
 
